# ai-master-desktop

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: CLAUDE.md
docs/product/: 20260425-ai-master-desktop-prd.md
docs/ux/: 20260425-layout-and-interaction-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  config.rs  conversation.rs  endpoint.rs  export.rs  export_import.rs  message.rs  mod.rs  provider.rs  role.rs  subscription.rs  tool_preset.rs  tool_terminal.rs
src-tauri/src/services/: config_file.rs  crypto.rs  mod.rs  stream_chat.rs
src/components/chat/: ChatArea.tsx  ChatPage.tsx  ConversationList.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  SlidePanel.tsx  StatusBar.tsx
src/components/models/: ModelsPage.tsx  SubscriptionForm.tsx
src/components/roles/: RoleForm.tsx  RoleLibraryPanel.tsx
src/components/settings/: SettingsPage.tsx
src/components/tools/: ToolConfigPanel.tsx  ToolsPage.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: chatStatusEvents.ts  openExternal.ts  subscriptionEvents.ts  tauri.ts  theme.ts
src/theme/: ThemeProvider.tsx
src/types/: backup.ts  conversation.ts  message.ts  provider.ts  role.ts  subscription.ts  toolPreset.ts
